--- a/index.html
+++ b/index.html
@@ -28,6 +28,69 @@
 
         </section>
 
+        <section class="resultados-pesquisa">
+
+            <div class="item-resultado">
+
+                <h2>
+
+                    <a href="#" target="_blank">Hyundai HB20 2023</a>
+
+                </h2>
+
+                <p class="descricao-meta">O Hyundai HB20 2023 é um hatch compacto muito popular no Brasil, conhecido por
+                    seu design moderno e tecnologia embarcada. A linha 2023 traz melhorias estéticas, principalmente na
+                    grade frontal e nos faróis, além de atualizações nos itens de conforto e segurança. O carro oferece
+                    uma variedade de versões com motorização que vai desde o 1.0 aspirado até o 1.0 turbo, com opções de
+                    câmbio manual e automático.</p>
+
+                <a href="https://www.webmotors.com.br/hyundai/hb20/2023" target="_blank">Mais
+                    informações</a>
+
+            </div>
+
+            <div class="item-resultado">
+
+                <h2>
+
+                    <a href="#" target="_blank">Ford Ranger</a>
+
+                </h2>
+
+                <p class="descricao-meta">A Ford Ranger 2024 é uma picape de médio porte com um design moderno e
+                    robusto. Ela oferece uma cabine espaçosa, uma tela de infotainment grande, e opções de motorização
+                    eficientes. O modelo tem bom desempenho tanto em estradas quanto fora de estrada e vem com várias
+                    características de tecnologia e segurança.</p>
+
+                <a href="https://www.webmotors.com.br/ford/ranger/2024" target="_blank">Mais informações</a>
+
+            </div>
+
+            <div class="item-resultado">
+
+                <h2>
+
+                    <a href="#" target="_blank">Audi</a>
+
+                </h2>
+
+                <p class="descricao-meta">O Audi Q3 2024 é um SUV compacto que combina elegância e desempenho. Com um
+                    design sofisticado, interior luxuoso e tecnologia avançada, é ideal para quem busca conforto e
+                    estilo.</p>
+
+                <a href="https://www.webmotors.com.br/audi/q3/2024" target="_blank">Mais informações</a>
+                
+            </div>
+
+        </section>
+
+
+
+
+
+
+
+
     </main>
 
     <footer>
