--- a/index.html
+++ b/index.html
@@ -79,17 +79,10 @@
                     estilo.</p>
 
                 <a href="https://www.webmotors.com.br/audi/q3/2024" target="_blank">Mais informações</a>
-                
+
             </div>
 
         </section>
-
-
-
-
-
-
-
 
     </main>
 
@@ -101,6 +94,7 @@
 
     </footer>
 
+    <script src="src/js/dados.js"></script>
 
 </body>
 
