--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <h2>
 
-                    <a href="#" target="_blank">Hyundai HB20 2023</a>
+                    <a href="#" target="_blank">Hyundai</a>
 
                 </h2>
 
@@ -70,7 +70,7 @@
 
                 <h2>
 
-                    <a href="#" target="_blank">Audi</a>
+                    <a href="#" target="_blank">Audi Q3</a>
 
                 </h2>
 
