--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
 
             </div>
 
+            <div class="item-resultado">
+
+                <h2>
+
+                    <a href="#" target="_blank">Nissan Leaf</a>
+
+                </h2>
+
+                <p class="descricao-meta">O Nissan Leaf 2024 é um dos carros elétricos mais acessíveis do mercado,
+                    conhecido por seu design moderno e tecnologia inovadora. Com uma autonomia melhorada e uma condução
+                    suave, o Leaf é uma excelente opção para quem deseja um veículo sustentável e econômico.</p>
+
+                <a href="https://www.webmotors.com.br/nissan/leaf/2024" target="_blank">Mais informações</a>
+
+            </div>
+
+
         </section>
 
     </main>
@@ -95,7 +112,7 @@
     </footer>
 
     <script src="src/js/dados.js"></script>
-    
+
     <script src="src/js/app.js"></script>
 
 </body>
