add id resultados-pesquisa no section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
         </section>
 
-        <section class="resultados-pesquisa">
+        <section class="resultados-pesquisa" id="resultados-pesquisa">
 
-            <div class="item-resultado">
+            <!-- <div class="item-resultado">
 
                 <h2>
 
@@ -96,7 +96,7 @@
 
                 <a href="https://www.webmotors.com.br/nissan/leaf/2024" target="_blank">Mais informações</a>
 
-            </div>
+            </div> -->
 
 
         </section>
