--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <input type="text" placeholder="Digite o nome do carro">
 
-            <button>Pesquisar</button>
+            <button onclick="pesquisar()">Pesquisar</button>
 
         </section>
 
