--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <section>
 
-            <input type="text" placeholder="Digite o nome do carro">
+            <input type="text" placeholder="Digite o nome do carro" id="campo-pesquisa">
 
             <button onclick="pesquisar()">Pesquisar</button>
 
