--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body>
 
+    <video autoplay muted loop id="video-background">
+
+        <source src="src/video/carros.mp4" type="video/mp4">
+        Seu navegador não suporta vídeos.
+
+    </video>
+
     <header>
 
         <h1>Marcas Diversas</h1>
