--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <section>
 
-            <input type="text" placeholder="Digite o nome do carro" id="campo-pesquisa">
+            <input type="text" placeholder="Digite o nome da marca" id="campo-pesquisa">
 
             <button onclick="pesquisar()">Pesquisar</button>
 
